loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: identifier expected but string literal found.
while (getCouleurSol():Color=="blanc") {
                              ^Poucet1:14: error: ')' expected but '}' found.
	}
        ^